Moved ServerWrapper to it own package